AM_CXXFLAGS = -DTIXML_USE_STL -I$(top_srcdir)/src -I$(top_srcdir)/src/core -I$(top_srcdir)/src/matrix -I$(top_srcdir)/src/matrix/simd -I$(top_srcdir)/src/tinyxml -I$(top_srcdir)/src/misc
noinst_LTLIBRARIES = libmongoose.la 
libmongoose_la_SOURCES = mongoose.h mongoose.c MongooseService.hpp MongooseService.cpp


